[CSS] Fix arithmetic operator and calc() function
Fixes #2356

This commit ...

1. adds `arithmetic` sub scope to all arithmetic operators.
2. scopes operators `invalid.illegal.operator` if
   a) not sufficiently surrounded by white space between two numeric
      literals in calc() functions.
   b) not followed by white space in color adjusting functions.

--- a/CSS/syntax_test_css.css
+++ b/CSS/syntax_test_css.css
@@ -393,22 +393,60 @@
 
 .test-operators {
     top: calc(1px + 1px);
-    /*            ^ keyword.operator.css */
-    top: calc(1px - 1px);
-    /*            ^ keyword.operator.css */
-    top: calc(1px / 1px);
-    /*            ^ keyword.operator.css */
-    top: calc(1px * 1px);
-    /*            ^ keyword.operator.css */
+    /*            ^ keyword.operator.arithmetic.css */
+    top: calc(+1px+1px);
+    /*        ^ keyword.operator.arithmetic.css */
+    /*            ^ invalid.illegal.operator.css */
+    top: calc(1px+ 1px);
+    /*           ^ invalid.illegal.operator.css */
+    top: calc(1px +1px);
+    /*            ^ invalid.illegal.operator.css */
+    top: calc((1px) +1px);
+    /*              ^ invalid.illegal.operator.css */
+    top: calc((1px)+ 1px);
+    /*             ^ invalid.illegal.operator.css */
+    top: calc(+1px+(+1px)+1px);
+    /*        ^ keyword.operator.arithmetic.css */
+    /*            ^ keyword.operator.arithmetic.css */
+    /*              ^ keyword.operator.arithmetic.css */
+    /*                   ^ invalid.illegal.operator.css */
 
-    top: calc(1px+1px);
-    /*           ^ -keyword.operator.css */
-    top: calc(1px-1px);
-    /*           ^ -keyword.operator.css */
-    top: calc(1px/1px);
-    /*           ^ keyword.operator.css */
+    top: calc(1px - 1px);
+    /*            ^ keyword.operator.arithmetic.css */
+    top: calc(-1px-1px);
+    /*        ^ keyword.operator.arithmetic.css */
+    /*            ^ invalid.illegal.operator.css */
+    top: calc(1px- 1px);
+    /*           ^ invalid.illegal.operator.css */
+    top: calc(1px -1px);
+    /*            ^ invalid.illegal.operator.css */
+    top: calc((1px) -1px);
+    /*              ^ invalid.illegal.operator.css */
+    top: calc((1px)- 1px);
+    /*             ^ invalid.illegal.operator.css */
+    top: calc(-1px-(-1px)-1px);
+    /*        ^ keyword.operator.arithmetic.css */
+    /*            ^ keyword.operator.arithmetic.css */
+    /*              ^ keyword.operator.arithmetic.css */
+    /*                   ^ invalid.illegal.operator.css */
+
+    top: calc(1px * 1px);
+    /*            ^ keyword.operator.arithmetic.css */
+    top: calc(1px* 1px);
+    /*           ^ keyword.operator.arithmetic.css */
+    top: calc(1px *1px);
+    /*            ^ keyword.operator.arithmetic.css */
     top: calc(1px*1px);
-    /*           ^ keyword.operator.css */
+    /*           ^ keyword.operator.arithmetic.css */
+
+    top: calc(1px / 1px);
+    /*            ^ keyword.operator.arithmetic.css */
+    top: calc(1px/ 1px);
+    /*           ^ keyword.operator.arithmetic.css */
+    top: calc(1px /1px);
+    /*            ^ keyword.operator.arithmetic.css */
+    top: calc(1px/1px);
+    /*           ^ keyword.operator.arithmetic.css */
 }
 
 .test-important {
@@ -693,19 +731,25 @@
 
     top: alpha(- 1.5%);
 /*       ^^^^^ support.function.color.css */
-/*             ^ keyword.operator.css */
+/*             ^ keyword.operator.arithmetic.css */
 /*               ^^^ meta.number.float.decimal.css constant.numeric.value.css */
 /*                  ^ meta.number.float.decimal.css constant.numeric.suffix.css */
 
+    top: alpha(-1.5%);
+/*       ^^^^^ support.function.color.css */
+/*             ^ invalid.illegal.operator.css */
+/*              ^^^ meta.number.float.decimal.css constant.numeric.value.css */
+/*                 ^ meta.number.float.decimal.css constant.numeric.suffix.css */
+
     top: h(+ 1.5deg);
 /*       ^ support.function.color.css */
-/*         ^ keyword.operator.css */
+/*         ^ keyword.operator.arithmetic.css */
 /*           ^^^ meta.number.float.decimal.css constant.numeric.value.css */
 /*              ^^^ meta.number.float.decimal.css constant.numeric.suffix.css */
 
     top: w(* 1.5%);
 /*       ^ support.function.color.css */
-/*         ^ keyword.operator.css */
+/*         ^ keyword.operator.arithmetic.css */
 /*           ^^^ meta.number.float.decimal.css constant.numeric.value.css */
 /*              ^ meta.number.float.decimal.css constant.numeric.suffix.css */
 
@@ -902,13 +946,13 @@
     top: calc(calc() * calc());
 /*       ^^^^ support.function.calc.css */
 /*            ^^^^ support.function.calc.css */
-/*                   ^ keyword.operator.css */
+/*                   ^ keyword.operator.arithmetic.css */
 /*                     ^^^^ support.function.calc.css */
 
     top: calc(var() * var());
 /*       ^^^^ support.function.calc.css */
 /*            ^^^ support.function.var.css */
-/*                  ^ keyword.operator.css */
+/*                  ^ keyword.operator.arithmetic.css */
 /*                    ^^^ support.function.var.css */
 
     top: calc(100% - (1 * 10px) / 1 - (1 * 10px) / 1 - (1 * 10px) / 1);
@@ -918,24 +962,24 @@
 /*           ^ punctuation.definition.group.begin.css */
 /*            ^^^ meta.number.integer.decimal.css constant.numeric.value.css */
 /*               ^ meta.number.integer.decimal.css constant.numeric.suffix.css */
-/*                 ^ keyword.operator.css */
+/*                 ^ keyword.operator.arithmetic.css */
 /*                   ^ punctuation.definition.group.begin.css */
 /*                   ^^^^^^^^^^ meta.group.css meta.group.css */
 /*                            ^ punctuation.definition.group.end.css */
-/*                              ^ keyword.operator.css */
+/*                              ^ keyword.operator.arithmetic.css */
 /*                                    ^ punctuation.definition.group.begin.css */
 /*                                         ^^ meta.number.integer.decimal.css constant.numeric.value.css */
 /*                                           ^^ meta.number.integer.decimal.css constant.numeric.suffix.css */
 /*                                             ^ punctuation.definition.group.end.css */
-/*                                               ^ keyword.operator.css */
-/*                                                   ^ keyword.operator.css */
+/*                                               ^ keyword.operator.arithmetic.css */
+/*                                                   ^ keyword.operator.arithmetic.css */
 /*                                                     ^ punctuation.definition.group.begin.css */
 /*                                                      ^ meta.number.integer.decimal.css constant.numeric.value.css */
-/*                                                        ^ keyword.operator.css */
+/*                                                        ^ keyword.operator.arithmetic.css */
 /*                                                          ^^ meta.number.integer.decimal.css constant.numeric.value.css */
 /*                                                            ^^ meta.number.integer.decimal.css constant.numeric.suffix.css */
 /*                                                              ^ punctuation.definition.group.end.css */
-/*                                                                ^ keyword.operator.css */
+/*                                                                ^ keyword.operator.arithmetic.css */
 /*                                                                  ^ meta.number.integer.decimal.css constant.numeric.value.css */
 /*                                                                   ^ punctuation.definition.group.end.css */
 /*                                                                    ^ punctuation.terminator.rule.css - meta.group */
